Fixed sort by desc, sort by ratings, modal visibility

--- a/frontend/assets/css/common.css
+++ b/frontend/assets/css/common.css
@@ -58,6 +58,7 @@ body {
     z-index: 1;
     background-color: grey;
     width: 100%;
+    visibility: hidden;
 }
 
 #tag {
